--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html, body, #root {
+    padding:0!important;
+    margin:0!important;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
